feat: complete Windows 1.0 functional release